--- a/styles/css/vtex.product-price.css
+++ b/styles/css/vtex.product-price.css
@@ -1,63 +1,1 @@
-.listPrice {
-  color: #727273;
-  margin-bottom: 0.25rem;
-  font-size: 1rem;
-}
-.sellingPrice {
- margin-bottom: 6px;
-}
-
-.sellingPrice {
-    font-size: 13px;
-}
-
-:global(.vtex-slider-layout-0-x-sliderLayoutContainer--shelf) .sellingPrice,
-:global(.vtex-slider-layout-0-x-sliderLayoutContainer--shelf) .sellingPrice .currencyContainer--summary,
-:global(.vtex-search-result-3-x-galleryItem) .sellingPrice,
-:global(.vtex-search-result-3-x-galleryItem) .sellingPrice .currencyContainer--summary {
-  color: #e26001;
-  font-family: 'Signika';
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-}
-.sellingPriceValue {
-  font-size: 2.25rem;
-  font-weight: 700;
-}
-.installments {
-  color: #727273;
-  margin-bottom: 1rem;
-}
-.savings {
-  font-weight: 500;
-  color: #79b03a;
-}
-.sellingPriceValue--summary {
-  font-size: 1.25rem;
-  font-weight: 600;
-  color: #2e2e2e;
-}
-.savings--summary {
-  background: #8bc34a;
-  border-radius: 1000px;
-  align-items: center;
-  display: flex;
-}
-.savings-discount--summary {
-  font-size: 0.875rem;
-  font-weight: 600;
-  vertical-align: baseline;
-  color: #fff;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-.listPrice--summary {
-  margin-bottom: 0.25rem;
-  font-size: 0.875rem;
-}
-.installments--summary {
-  margin-bottom: 2rem;
-  font-size: 0.875rem;
-}
+.listPrice{color:#727273;margin-bottom:.25rem;font-size:1rem}.sellingPrice{margin-bottom:6px}.sellingPrice{font-size:13px}:global(.vtex-search-result-3-x-galleryItem) .sellingPrice,:global(.vtex-search-result-3-x-galleryItem) .sellingPrice .currencyContainer--summary,:global(.vtex-slider-layout-0-x-sliderLayoutContainer--shelf) .sellingPrice,:global(.vtex-slider-layout-0-x-sliderLayoutContainer--shelf) .sellingPrice .currencyContainer--summary{color:#e26001;font-family:Signika;font-size:28px;font-style:normal;font-weight:600;line-height:normal}.sellingPriceValue{font-size:2.25rem;font-weight:700}.installments{color:#727273;margin-bottom:1rem}.savings{font-weight:500;color:#79b03a}.sellingPriceValue--summary{font-size:1.25rem;font-weight:600;color:#2e2e2e}.savings--summary{background:#8bc34a;border-radius:1000px;align-items:center;display:flex}.savings-discount--summary{font-size:.875rem;font-weight:600;vertical-align:baseline;color:#fff;padding-left:.5rem;padding-right:.5rem}.listPrice--summary{margin-bottom:.25rem;font-size:.875rem}.installments--summary{margin-bottom:2rem;font-size:.875rem}
