--- a/styles/css/vtex.product-summary.css
+++ b/styles/css/vtex.product-summary.css
@@ -1,93 +1,1 @@
-.skuSelectorContainer--quickview .skuSelectorItemImage .frameAround,
-.skuSelectorContainer--quickview .skuSelectorItemImage .skuSelectorInternalBox {
-  border-radius: 50%;
-}
-.container :global(.vtex-modal-layout-0-x-triggerContainer) {
-  opacity: 0;
-  transition: opacity 0.2s ease-in-out;
-}
-.container:hover :global(.vtex-modal-layout-0-x-triggerContainer) {
-  opacity: 1;
-}
-@media screen and (max-width: 40em) {
-  .container :global(.vtex-modal-layout-0-x-triggerContainer) {
-    display: none;
-  }
-}
-.nameContainer {
-  justify-content: start;
-  padding-top: 1rem;
-  padding-bottom: 0;
-}
-.brandName {
-  font-weight: 600;
-  font-size: 18px;
-  color: #2e2e2e;
-}
-.container {
-  text-align: start;
-  border-radius: 10px;
-  background: #fff;
-  padding: 14px 18px;
-  margin-top: 2px;
-  transition: box-shadow 0.2s ease-in-out;
-}
-.container:hover {
-  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
-}
-.imageContainer {
-  text-align: center;
-}
-.image {
-  border-radius: 0.25rem;
-}
-:global(.vtex-product-summary-2-x-description) {
-  color: #555;
-  margin-bottom: 10px;
-  font-size: 12px;
-  font-family: 'Signika';
-  font-weight: 400;
-  margin-top: 12px;
-}
-.containerNormal
-  :global(.vtex-reviews-and-ratings-3-x-reviewCommentsContainer) {
-  display: none;
-}
-:global(.vtex-product-specifications-1-x-specificationValue) {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 15px;
-}
-
-.element {
-  padding-bottom: 0;
-}
-
-:global(.vtex-search-result-3-x-galleryItem) .element {
-  padding-top: 22px;
-}
-
-@media (max-width: 768px) {
-  .container {
-    padding: 0;
-  }
-
-  .container:hover {
-    box-shadow: none;
-  }
-
-  .nameContainer {
-    padding-top: 0;
-    padding-bottom: 0;
-    min-height: 40px !important;
-  }
-
-  .element {
-    padding-top: 30px;
-  }
-
-  :global(.vtex-search-result-3-x-galleryItem) .element {
-    padding-top: 42px;
-  }
-}
+.skuSelectorContainer--quickview .skuSelectorItemImage .frameAround,.skuSelectorContainer--quickview .skuSelectorItemImage .skuSelectorInternalBox{border-radius:50%}.container :global(.vtex-modal-layout-0-x-triggerContainer){opacity:0;transition:opacity .2s ease-in-out}.container:hover :global(.vtex-modal-layout-0-x-triggerContainer){opacity:1}@media screen and (max-width:40em){.container :global(.vtex-modal-layout-0-x-triggerContainer){display:none}}.nameContainer{justify-content:start;padding-top:1rem;padding-bottom:0}.brandName{font-weight:600;font-size:18px;color:#2e2e2e}.container{text-align:start;border-radius:10px;background:#fff;padding:14px 18px;margin-top:2px;transition:box-shadow .2s ease-in-out}.container:hover{box-shadow:0 0 4px 0 rgba(0,0,0,.25)}.imageContainer{text-align:center}.image{border-radius:.25rem}:global(.vtex-product-summary-2-x-description){color:#555;margin-bottom:10px;font-size:12px;font-family:Signika;font-weight:400;margin-top:12px}.containerNormal :global(.vtex-reviews-and-ratings-3-x-reviewCommentsContainer){display:none}:global(.vtex-product-specifications-1-x-specificationValue){display:flex;flex-direction:column;align-items:center;gap:15px}.element{padding-bottom:0}:global(.vtex-search-result-3-x-galleryItem) .element{padding-top:22px}@media (max-width:768px){.container{padding:0}.container:hover{box-shadow:none}.nameContainer{padding-top:0;padding-bottom:0;min-height:40px!important}.element{padding-top:30px}:global(.vtex-search-result-3-x-galleryItem) .element{padding-top:42px}}
