--- a/styles/css/vtex.stack-layout.css
+++ b/styles/css/vtex.stack-layout.css
@@ -1,8 +1,1 @@
-.stackItem--product {
-  width: 100%;
-}
-.stackItem--quickview {
-  right: -10px;
-  top: 18px;
-  left: auto;
-}
+.stackItem--product{width:100%}.stackItem--quickview{right:-10px;top:18px;left:auto}
