--- a/styles/css/vtex.wish-list.css
+++ b/styles/css/vtex.wish-list.css
@@ -1,24 +1,1 @@
-.outline {
-  background-size: 100%;
-}
-
-.wishlistIconContainer {
-  top: 7px;
-  left: 22px;
-  position: absolute;
-}
-
-:global(.vtex-flex-layout-0-x-flexRow--product-main) .wishlistIconContainer {
-    position: initial;
-}
-
-:global(.vtex-search-result-3-x-galleryItem) .wishlistIconContainer {
-    top: 16px;
-    left: 28px;
-}
-
-@media (max-width: 768px) {
-    .wishlistIconContainer {
-        position: initial;
-    }
-}
+.outline{background-size:100%}.wishlistIconContainer{top:7px;left:22px;position:absolute}:global(.vtex-flex-layout-0-x-flexRow--product-main) .wishlistIconContainer{position:initial}:global(.vtex-search-result-3-x-galleryItem) .wishlistIconContainer{top:16px;left:28px}@media (max-width:768px){.wishlistIconContainer{position:initial}}
